--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,4 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10,<3.13"
 dependencies = []
+package-mode = false
