--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10,<3.13"
-dependencies = []
+dependencies = [
+     "streamlit",
+    "cryptography",
+    "sqlite3"
+]
 package-mode = false
